Add title and grid spacing.

--- a/floor_plan.html
+++ b/floor_plan.html
@@ -9,6 +9,10 @@
     </script>
   </head>
   <body>
+    <h1>MIT Hobby Shop</h1>
+    <p>
+      Each grid box is 8 feet by 8 feet.
+    </p>
     <img src="floor_plan.svg"
          alt="Floor plan of the Hobby Shop showing the locations of machines, furnature, tools, etc."/>
   </body>
