Closer, but still not working.

--- a/floor_plan.html
+++ b/floor_plan.html
@@ -14,7 +14,8 @@ document.addEventListener("DOMContentLoaded", contentLoaded, false);
     <p>
       Each grid box is 16 feet by 16 feet.
     </p>
-    <object data="floor_plan.svg"
+    <object id="floor_plan_svg"
+            data="floor_plan_cleanup/cleaned_up.svg"
             type="image/svg+xml"
             alt="Floor plan of the Hobby Shop showing the locations of machines, furnature, tools, etc."/>
   </body>
