Place things at onload, rather than at onContentLoaded.

--- a/floor_plan.html
+++ b/floor_plan.html
@@ -5,7 +5,7 @@
     <script type="text/javascript" src="placement.js"/>
     <script type="text/javascript">
 //<![CDATA[
-document.addEventListener("DOMContentLoaded", contentLoaded, false);
+window.onload = contentLoaded;
 //]]>
     </script>
   </head>
