Make description font size a bit smaller.

--- a/floor_plan.html
+++ b/floor_plan.html
@@ -12,6 +12,7 @@
           border-color: black;
           border-width: 1px;
           margin: 4ex;
+          font-size: smaller;
       }
       .description .name {
           text-align: center;
