--- a/floor_plan.html
+++ b/floor_plan.html
@@ -18,6 +18,9 @@
           text-align: center;
           font-weight: bolder;
       }
+      .pointer-position span {
+          min-width: 8em;
+      }
     </style>
     <script type="text/javascript" src="placement.js"></script>
     <script type="text/javascript">
@@ -37,6 +40,10 @@ window.onload = function() {
       Each grid box is 16 feet by 16 feet.
     </p>
     <div id="description"></div>
+    <div class="pointer-position">
+      X: <span id="show-pointer-x"></span>,
+      Y: <span id="show-pointer-y"></span>
+    </div>>
     <div>
       <!-- 
       We use object instead of img so that code in placement.js can
