Remove foo.  We now understand that the problem it was put in to iinvestigate was due to an excessive value for the -increase_viewbox_height command line argument when cleaning up the Inkscape SVG.

--- a/floor_plan.html
+++ b/floor_plan.html
@@ -54,10 +54,9 @@ window.onload = function() {
               type="image/svg+xml"
               alt="Floor plan of the Hobby Shop showing the locations of
                    machines, furnature, tools, etc.">
-        The Hobby Shop floor plan should appearf here.
+        The Hobby Shop floor plan should appear here.
       </object>
     </div>
-    <p>Foo</p>
     <div id="items">
     </div>
   </body>
