Use a target circle to indicate selection.  Leaving no longer working selected item color animation in place for now.

--- a/floor_plan.html
+++ b/floor_plan.html
@@ -43,7 +43,7 @@ window.onload = function() {
     <div class="pointer-position">
       X: <span id="show-pointer-x"></span>,
       Y: <span id="show-pointer-y"></span>
-    </div>>
+    </div>
     <div>
       <!-- 
       We use object instead of img so that code in placement.js can
