--- a/furnashings/CNC_metal_lathe-SI_154CH089.html
+++ b/furnashings/CNC_metal_lathe-SI_154CH089.html
@@ -28,3 +28,11 @@
     </tr>
   </tbody>
 </table>
+
+<p>
+  Mounted cutters for this lathe can be found
+  <a href="#SI_154CH089-cutters"
+     onclick="select_item('SI_154CH089-cutters')">
+    on the wall to the left
+  </a>.
+</p>
