Support for the contents JSON property.

--- a/floor_plan.html
+++ b/floor_plan.html
@@ -21,6 +21,12 @@
       .pointer-position span {
           min-width: 8em;
       }
+      .item {
+          margin-left: 2em;
+      }
+      .container {
+          margin-left: 2em;
+      }
     </style>
     <script type="text/javascript" src="placement.js"></script>
     <script type="text/javascript">
