--- a/floor_plan.html
+++ b/floor_plan.html
@@ -21,8 +21,14 @@
       .pointer-position span {
           min-width: 8em;
       }
+      #filter {
+          margin: 4ex;
+      }
       .item {
           margin-left: 2em;
+      }
+      .hidden-item {
+          display: none;
       }
       .container {
           margin-left: 2em;
@@ -60,7 +66,13 @@ window.onload = function() {
         The Hobby Shop floor plan should appear here.
       </object>
     </div>
-    <div id="items">
+    <div id="filter">
+      <form>
+        Filter items: 
+        <input name="filter" type="text" size="40"
+               onchange="filter_items_list(this.value)"/>
+      </form>
     </div>
+    <div id="items"></div>
   </body>
 </html>
