Make filter input more visible.

--- a/floor_plan.html
+++ b/floor_plan.html
@@ -22,7 +22,10 @@
           min-width: 8em;
       }
       #filter {
-          margin: 4ex;
+          margin: 6ex;
+      }
+      #filter input {
+          border-style: solid;
       }
       .item {
           margin-left: 2em;
