--- a/floor_plan.html
+++ b/floor_plan.html
@@ -91,6 +91,13 @@ window.onload = function() {
         The Hobby Shop floor plan should appear here.
       </object>
     </div>
+    <div id="controls">
+      <a id="download_floor_plan"
+         download="HobbyShop-floor-plan.svg"
+         href="">
+        Download the floor plan as an SVG file
+      </a>
+    </div>
     <div id="filter">
       Filter items: 
       <input name="filter" type="text" size="40"
