--- a/furnashings/CNC_metal_lathe-SI_154CH089.html
+++ b/furnashings/CNC_metal_lathe-SI_154CH089.html
@@ -16,7 +16,7 @@
       <td>154CH089    </td>
     </tr>
     <tr>
-      <th>DOcumentyation</th>
+      <th>Documentyation</th>
       <td>
         <a href="https://www.southwesternindustries.com/products/trlsx-toolroom-lathes">Manuals</a>
         <br />
