Get pictures working.  Full HTML pages for descriptions, which are now in an iframe.

--- a/furnashings/CNC_metal_lathe-SI_154CH089.html
+++ b/furnashings/CNC_metal_lathe-SI_154CH089.html
@@ -1,38 +1,50 @@
-<!- This file contains an NTML fragment that is inserted into the
- desxcription box when describing this metal lathe,
- -->
-<table>
-  <tbody>
-    <tr>
-      <th>Manufacturer</th>
-      <td>Southwestern Industries, Inc.</td>
-    </tr>
-    <tr>
-      <th>Model</th>
-      <td>TRAK 2630SX</td>
-    </tr>
-    <tr>
-      <th>Serial number</th>
-      <td>154CH089    </td>
-    </tr>
-    <tr>
-      <th>Documentyation</th>
-      <td>
-        <a href="https://www.southwesternindustries.com/products/trlsx-toolroom-lathes">Manuals</a>
-        <br />
-        <a href="https://www.southwesternindustries.com/documents/SWI/swi/Support/Documents/Service%20Price%20Lists/L12A.pdf?rev=191147">Parts</a>
-        <br />
-        <a href="https://www.southwesternindustries.com/documents/SWI/swi/Support/Documents/Specs/TRL1630SX.doc?rev=191147">Specifications</a>
-            
-      </td>
-    </tr>
-  </tbody>
-</table>
+<html>
+  <head>
+    <link rel="stylesheet" href="description_styles.css" />
+  </head>
+  <body>
 
-<p>
-  Mounted cutters for this lathe can be found
-  <a href="#SI_154CH089-cutters"
-     onclick="select_item('SI_154CH089-cutters')">
-    on the wall to the left
-  </a>.
-</p>
+    <div class="title">
+      CNC metal lathe-SI 154CH089
+    </div>
+
+    <table>
+      <tbody>
+        <tr>
+          <th>Manufacturer</th>
+          <td>Southwestern Industries, Inc.</td>
+        </tr>
+        <tr>
+          <th>Model</th>
+          <td>TRAK 2630SX</td>
+        </tr>
+        <tr>
+          <th>Serial number</th>
+          <td>154CH089    </td>
+        </tr>
+        <tr>
+          <th>Documentyation</th>
+          <td>
+            <a href="https://www.southwesternindustries.com/products/trlsx-toolroom-lathes">Manuals</a>
+            <br />
+            <a href="https://www.southwesternindustries.com/documents/SWI/swi/Support/Documents/Service%20Price%20Lists/L12A.pdf?rev=191147">Parts</a>
+            <br />
+            <a href="https://www.southwesternindustries.com/documents/SWI/swi/Support/Documents/Specs/TRL1630SX.doc?rev=191147">Specifications</a>
+            
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  
+    <p>
+      Mounted cutters for this lathe can be found
+      <a href="#SI_154CH089-cutters"
+         onclick="select_item('SI_154CH089-cutters')">
+        on the wall to the left
+      </a>.
+    </p>
+
+    <img src="pictures/metal_lathe.jpg"
+         alt="Photo of CNC metal lathe"/>
+  </body>
+</html>
