--- a/furnashings/Delta_spindle_sander.html
+++ b/furnashings/Delta_spindle_sander.html
@@ -1,8 +1,16 @@
-Delta floor mounted oscillating spindle sander
+<html>
+  <head>
+    <link rel="stylesheet" href="description_styles.css" />
+  </head>
+  <body>
 
-<div>
-  <a href="https://deltamachinery.com/products/sanders/31-484">
-    Description, Specs, etc.
-  </a>
-</div>
+    <div class="title">Delta floor mounted oscillating spindle sander</div>
 
+    <div>
+      <a href="https://deltamachinery.com/products/sanders/31-484">
+        Description, Specs, etc.
+      </a>
+    </div>
+
+  </body>
+</html>
