--- a/furnashings/Epilog_laser_cutter.html
+++ b/furnashings/Epilog_laser_cutter.html
@@ -1,7 +1,21 @@
-Epilog Fusion 120 Watt
+<html>
+  <head>
+    <link rel="stylesheet" href="description_styles.css" />
+  </head>
+  <body>
 
-<div>
-  <a href="https://www.epiloglaser.com/laser-machines/fusion-pro-laser-series.htm">
-    Specs, materials, etc.
-  </a>
-</div>
+    <div class="title">
+      Epilog Fusion 120 Watt Laser Cutter
+    </div>
+
+    <div>
+      <a href="https://www.epiloglaser.com/laser-machines/fusion-pro-laser-series.htm">
+        Specs, materials, etc.
+      </a>
+    </div>
+
+    <img src="pictures/laser_cutter.jpg"
+         alt="Photo of laser cutter" />
+    
+  </body>
+</html>
