--- a/furnashings/Festool_Kapex_miter_saw.html
+++ b/furnashings/Festool_Kapex_miter_saw.html
@@ -1,7 +1,21 @@
-Festool Kapex compound miter saw
+<html>
+  <head>
+    <link rel="stylesheet" href="description_styles.css" />
+  </head>
+  <body>
+    
+    <div class="title">
+      Festool Kapex compound miter saw
+    </div>
 
-<div>
-  <a href="https://www.festoolproducts.com/festool-575306-kapex-ks-120-reb-sliding-compound-miter-saw-2019-model.html?gclid=Cj0KCQjw0rr4BRCtARIsAB0_48MHqa7nLK8ks5dv_nNsw8fDXo9S6JphL3NRtc1Uf3UXLTllAflLow0aArXREALw_wcB">
-    general info
-  </a>
-</div>
+    <div>
+      <a href="https://www.festoolproducts.com/festool-575306-kapex-ks-120-reb-sliding-compound-miter-saw-2019-model.html?gclid=Cj0KCQjw0rr4BRCtARIsAB0_48MHqa7nLK8ks5dv_nNsw8fDXo9S6JphL3NRtc1Uf3UXLTllAflLow0aArXREALw_wcB">
+        general info
+      </a>
+    </div>
+
+    <img src="pictures/miter_saw.jpg"
+         alt="Photo of compound miter saw" />
+
+  </body>
+</html>
