--- a/furnashings/Jet_20VS_drill_press.html
+++ b/furnashings/Jet_20VS_drill_press.html
@@ -1,7 +1,21 @@
-Jet 20VS Variable Speed drill press
+<html>
+  <head>
+    <link rel="stylesheet" href="description_styles.css" />
+  </head>
+  <body>
+    
+    <div class="title">
+      Jet 20VS Variable Speed drill press
+    </div>
 
-<div>
-  <a href="https://www.jettools.com/us/en/p/jdp-20vs-1-1-1-4-drilling-capacity-2hp-115-230v-1ph/354230">
-    Sales literature with some specifications
-  </a>
-</div>
+    <div>
+      <a href="https://www.jettools.com/us/en/p/jdp-20vs-1-1-1-4-drilling-capacity-2hp-115-230v-1ph/354230">
+        Sales literature with some specifications
+      </a>
+    </div>
+
+    <img src="pictures/metal_drill_press.jpg"
+         alt="Photo of Jet drill press" />
+
+  </body>
+</html>
