--- a/furnashings/MicroMax.html
+++ b/furnashings/MicroMax.html
@@ -1,7 +1,21 @@
-Omax MicroMax Water Jet Machining Center
+<html>
+  <head>
+    <link rel="stylesheet" href="description_styles.css" />
+  </head>
+  <body>
+    
+    <div class="title">
+      Omax MicroMax Water Jet Machining Center
+    </div>
 
-<div>
-  <a href="https://www.omax.com/sites/default/files/media/specsheets/600091r-micromax.pdf">
-    Marketing literature
-  </a>
-</div>
+    <div>
+      <a href="https://www.omax.com/sites/default/files/media/specsheets/600091r-micromax.pdf">
+        Marketing literature
+      </a>
+    </div>
+
+    <img src="pictures/micromax.jpg"
+         alt="Photo of MicroMax water jet machining center" />
+
+  </body>
+</html>
