--- a/furnashings/MillerDynasty_TIG_welder.html
+++ b/furnashings/MillerDynasty_TIG_welder.html
@@ -1,7 +1,18 @@
-Miller Dynasty TIG Welder
+<html>
+  <head>
+    <link rel="stylesheet" href="description_styles.css" />
+  </head>
+  <body>
+    
+    <div class="title">
+      Miller Dynasty TIG Welder
+    </div>
 
-<div>
-  <a href="https://www.millerwelds.com/equipment/welders/tig-gtaw/dynasty-280-tig-welders-m00389">
-    general info
-    </a>
-</div>
+    <div>
+      <a href="https://www.millerwelds.com/equipment/welders/tig-gtaw/dynasty-280-tig-welders-m00389">
+        general info
+      </a>
+    </div>
+
+  </body>
+</html>
