--- a/furnashings/Northfield_jointer.html
+++ b/furnashings/Northfield_jointer.html
@@ -1,7 +1,22 @@
-Northfeild 12 inch jointer
+<html>
+  <head>
+    <link rel="stylesheet" href="description_styles.css" />
+  </head>
+  <body>
+    
+    <div class="title">
+      Northfeild 12 inch jointer
+    </div>
 
-<div>
-  <a href="http://www.northfieldwoodworking.com/jointers/medium.htm">
-    Specs and general info
-  </a>
-</div>
+    <div>
+      <a href="http://www.northfieldwoodworking.com/jointers/medium.htm">
+        Specs and general info
+      </a>
+    </div>
+
+    <img src="pictures/jointer.jpg"
+         alt="Photo of jointer" />
+
+  </body>
+</html>
+
