--- a/furnashings/Northfield_planer.html
+++ b/furnashings/Northfield_planer.html
@@ -1,7 +1,21 @@
-Northfeild 25 inch thickness planer
+<html>
+  <head>
+    <link rel="stylesheet" href="description_styles.css" />
+  </head>
+  <body>
 
-<div>
-  <a href="http://www.northfieldwoodworking.com/singlesurfacers/no7.htm">
-    Specs and general info
-  </a>
-</div>
+    <div class="title">
+      Northfeild 25 inch thickness planer
+    </div>
+
+    <div>
+      <a href="http://www.northfieldwoodworking.com/singlesurfacers/no7.htm">
+        Specs and general info
+      </a>
+    </div> 
+
+    <img src="pictures/thickness_planer.jpg"
+         alt="Photo of Northfield thickness planer outfeed" />
+
+  </body>
+</html>
