--- a/furnashings/PorterCable_router_table.html
+++ b/furnashings/PorterCable_router_table.html
@@ -1,14 +1,25 @@
-Porter Cable 3-1/4 HP router with Rockler Lift Kit
+<html>
+  <head>
+    <link rel="stylesheet" href="description_styles.css" />
+  </head>
+  <body>
+    
+    <div class="title">
+      Porter Cable 3-1/4 HP router with Rockler Lift Kit
+    </div>
 
-<ul>
-  <li>
-    <a href="https://www.portercable.com/products/power-tools/woodworking-tools/routers/314-hp-maximum-motor-hp-fivespeed-router/7518">
-      Router
-    </a>
-  </li>
-  <li>
-    <a href="https://www.rockler.com/rockler-pro-lift-router-lift-9-1-4-x-11-3-4-plate">
-      Router lift
-    </a>
-  <li>
-</ul>
+    <ul>
+      <li>
+        <a href="https://www.portercable.com/products/power-tools/woodworking-tools/routers/314-hp-maximum-motor-hp-fivespeed-router/7518">
+          Router
+        </a>
+      </li>
+      <li>
+        <a href="https://www.rockler.com/rockler-pro-lift-router-lift-9-1-4-x-11-3-4-plate">
+          Router lift
+        </a>
+      <li>
+    </ul>
+
+  </body>
+</html>
