--- a/furnashings/SawStop_cabinet_saw.html
+++ b/furnashings/SawStop_cabinet_saw.html
@@ -1,6 +1,20 @@
-<b>SawStop Cabinet Saw</b>
+<html>
+  <head>
+    <link rel="stylesheet" href="description_styles.css" />
+  </head>
+  <body>
+    
+    <div class="title">
+      <b>SawStop Cabinet Saw
+    </div>
 
-<p>
-  <a href="https://www.sawstop.com/table-saws/by-model/professional-cabinet-saw">
-    I can't find any meaningful documentation here.</a>
-</p>
+    <p>
+      <a href="https://www.sawstop.com/table-saws/by-model/professional-cabinet-saw">
+        I can't find any meaningful documentation here.</a>
+    </p>
+
+    <img src="pictures/table_saw.jpg"
+         alt="Photo of SawStop cabinet saw" />
+
+   </body>
+</html>
