--- a/furnashings/TRAK_CNC_mill.html
+++ b/furnashings/TRAK_CNC_mill.html
@@ -1,4 +1,19 @@
+<html>
+  <head>
+    <link rel="stylesheet" href="description_styles.css" />
+  </head>
+  <body>
+    
+    <div class="title">
+      TRAK CNC Mill
+    </div>
 
-<a href="https://www.southwesternindustries.com/media/manuals/29603_manual.pdf?rev=120221">
-  Reference Manual
-</a>
+    <a href="https://www.southwesternindustries.com/media/manuals/29603_manual.pdf?rev=120221">
+      Reference Manual
+    </a>
+
+    <img src="pictures/trak_mill.jpg"
+         alt="Photo of TRAK CNC mill" />
+
+  </body>
+</html>
