--- a/furnashings/Tannewitz_band_saw.html
+++ b/furnashings/Tannewitz_band_saw.html
@@ -1,9 +1,22 @@
-<div>
-  Model: Tannewitz Advantage Series 36 inch
-</div>
+<html>
+  <head>
+    <link rel="stylesheet" href="description_styles.css" />
+  </head>
+  <body>
 
-<div>
-  <a href="http://www.tannewitz.com/tannewitz-products/36bandsaws/">
-    General info and links to documentation
-  </a>
-</div>
+    <div class="title">
+      Model: Tannewitz Advantage Series 36 inch
+    </div>
+
+    <div>
+      <a href="http://www.tannewitz.com/tannewitz-products/36bandsaws/">
+        General info and links to documentation
+      </a>
+    </div>
+
+    <img src="pictures/tannewitz_band_saw.png"
+         alt="Photo of the wood shop band saw" />
+
+  </body>
+</html>
+
