--- a/furnashings/Timesavers_speed_sander.html
+++ b/furnashings/Timesavers_speed_sander.html
@@ -1,11 +1,21 @@
-<b>TimeSavers Speed Sander 42 inch wide</b>
+<html>
+  <head>
+    <link rel="stylesheet" href="description_styles.css" />
+  </head>
+  <body>
+    
+    <div class="title">
+      TimeSavers Speed Sander 42 inch wide
+    </div>
+    
+    <div>
+      <a href="http://timesaversinc.com/catalog/wood/speedsander-wide-belt-sander">
+        General info
+      </a>
+    </div>
 
-<div>
-  <a href="http://timesaversinc.com/catalog/wood/speedsander-wide-belt-sander">
-    General info
-  </a>
-</div>
+    <img src="pictures/Timesavers_speed_sander.jpg"
+         alt="Photo of the thickness sander" />
 
-<img src="furnashings/pictures/Timesavers_speed_sander.jpg"
-     style="object-fit: contain; max-width: 100%;"
-     alt="picture of the thickness sander" />
+   </body>
+</html>
