--- a/furnashings/wood_mill.html
+++ b/furnashings/wood_mill.html
@@ -1,9 +1,25 @@
-<p>
-  The Bridgeport milling machine in the wood shop area is just used
-  for wood.  Don't use the milling cutters from the metal shop.
-  Instead use the router bits that can be found in the
-  <a href="#router_bit_cabinet"
-     onclick="select_item('router_bit_cabinet')">
-    cabinet next to the router table
-  </a>.
-  
+<html>
+  <head>
+    <link rel="stylesheet" href="description_styles.css" />
+  </head>
+  <body>
+    
+    <div class="title">
+      Wood SHop Bridgeport Milling Machine
+    </div>
+
+    <p>
+      The Bridgeport milling machine in the wood shop area is just used
+      for wood.  Don't use the milling cutters from the metal shop.
+      Instead use the router bits that can be found in the
+      <a href="#router_bit_cabinet"
+         onclick="select_item('router_bit_cabinet')">
+        cabinet next to the router table
+      </a>.
+      
+      <img src="pictures/wood_shop_bridgeport_mill.jpg"
+           alt="Photo of wood shop Bridgeport mill"
+           />
+
+  </body>
+</html>
