--- a/furnashings/Millermatic_350P_MIG_welder.html
+++ b/furnashings/Millermatic_350P_MIG_welder.html
@@ -1,7 +1,18 @@
-Millermatic 350P MIG Welder
+<html>
+  <head>
+    <link rel="stylesheet" href="description_styles.css" />
+  </head>
+  <body>
+    
+    <div class="title">
+      Millermatic 350P MIG Welder
+    </div>
 
-<div>
-  <a href="https://www.millerwelds.com/equipment/welders/mig-gmaw/millermatic-350p-aluminum-mig-welder-m00398#!/?product-options-title=millermatic-350p-aluminum-push-pull-gun-welding-system-with-15-ft-4-6-m-xr-aluma-pro-air-cooled-gun-951451">
-    General info with links to detailed resources
-  </a>
-</div>
+    <div>
+      <a href="https://www.millerwelds.com/equipment/welders/mig-gmaw/millermatic-350p-aluminum-mig-welder-m00398#!/?product-options-title=millermatic-350p-aluminum-push-pull-gun-welding-system-with-15-ft-4-6-m-xr-aluma-pro-air-cooled-gun-951451">
+        General info with links to detailed resources
+      </a>
+    </div>
+
+  </body>
+</html>
