--- a/furnashings/ShopBotBuddy.html
+++ b/furnashings/ShopBotBuddy.html
@@ -1,15 +1,26 @@
-ShopBoy Buddy with 4th axis spindle.
+<html>
+  <head>
+    <link rel="stylesheet" href="description_styles.css" />
+  </head>
+  <body>
+    
+    <div class="title">
+      ShopBot Buddy with 4th axis spindle.
+    </div>
 
-<ul>
-  <li>
-    Links to a number of user documentation can be found at
-    <a href="https://www.shopbottools.com/support/documentation/buddy">
-      General Info
-    </a>.
-  </li>
-  <li>
-    <a href="https://www.shopbottools.com/ShopBotDocs/files/SBG%2000142%20User%20Guide%2020150317.pdf">
-      User Guide
-    </a>
-  </li>
-</ul>
+    <ul>
+      <li>
+        Links to a number of user documentation can be found at
+        <a href="https://www.shopbottools.com/support/documentation/buddy">
+          General Info
+        </a>.
+      </li>
+      <li>
+        <a href="https://www.shopbottools.com/ShopBotDocs/files/SBG%2000142%20User%20Guide%2020150317.pdf">
+          User Guide
+        </a>
+      </li>
+    </ul>
+
+  </body>
+</html>
