We don't need to callselect_item from description pages.

--- a/furnashings/CNC_metal_lathe-SI_154CH089.html
+++ b/furnashings/CNC_metal_lathe-SI_154CH089.html
@@ -38,8 +38,7 @@
   
     <p>
       Mounted cutters for this lathe can be found
-      <a href="#SI_154CH089-cutters"
-         onclick="select_item('SI_154CH089-cutters')">
+      <a href="../floor_plan.html#SI_154CH089-cutters">
         on the wall to the left
       </a>.
     </p>
