--- a/furnashings/wood_mill.html
+++ b/furnashings/wood_mill.html
@@ -12,8 +12,7 @@
       The Bridgeport milling machine in the wood shop area is just used
       for wood.  Don't use the milling cutters from the metal shop.
       Instead use the router bits that can be found in the
-      <a href="#router_bit_cabinet"
-         onclick="select_item('router_bit_cabinet')">
+      <a href="../floor_plan.html#router_bit_cabinet">
         cabinet next to the router table
       </a>.
       
