--- a/furnashings/Tormach_CNC_mill.html
+++ b/furnashings/Tormach_CNC_mill.html
@@ -8,6 +8,24 @@
       Tormach CNC mill
     </div>
 
+    <ul>
+      <li>
+        <a href="https://tormach.com/machines/mills/pcnc-440.html">
+          Product page
+        </a>
+      </li>
+      <li>
+        <a href="https://tormach.com/docs/download/assetlink/asset_id/326">
+          Operators manual
+        </a>
+      </li>
+      <li>
+        <a href="https://tormach.com/support/mill/pcnc-440-documents">
+          Other documents
+        </a>
+      </li>
+    </ul>
+
     <img src="pictures/Tormach_CNC_mill.jpg"
          alt="Photo of Tormach CNC milliing machine" />
 
