--- a/floor_plan.html
+++ b/floor_plan.html
@@ -2,6 +2,8 @@
 <html lang="en">
   <head>
     <title>Hobby Shop Floor Plan</title>
+    <meta name="viewport"
+          content="width=device-width, initial-scale=1">
     <style type="text/css">
       html, body {
           position: relative;
