Add Clustermarket BookItlink.

--- a/floor_plan.html
+++ b/floor_plan.html
@@ -29,7 +29,7 @@
       #description {
           display: block;
           border-style: solid;
-          border-color: black;
+          border-color: blue;
           border-width: 1px;
           margin: 4ex;
           font-size: smaller;
@@ -37,6 +37,11 @@
       .description .name {
           text-align: center;
           font-weight: bolder;
+      }
+      .bookit {
+          font-sie: larger;
+          font-weight:bolder;
+          margin: 2ex;
       }
       .pointer-position span {
           min-width: 8em;
