Move css from floor_plan.html to separate shared css file.

--- a/floor_plan.html
+++ b/floor_plan.html
@@ -4,64 +4,8 @@
     <title>Hobby Shop Floor Plan</title>
     <meta name="viewport"
           content="width=device-width, initial-scale=1">
-    <style type="text/css">
-      html, body {
-          position: relative;
-          min-height: 100%;
-      }
-      #selection-overlay {
-          display: block;
-          position: absolute;
-          top: 0;
-          left: 0;
-          overflow: visible;
-          min-width: 100%;
-          min-height: 100%;
-          z-index: 5;
-          pointer-events: none;
-          stroke: blue;
-          fill: none;
-          stroke-width: 1px;
-      }
-      #description:empty {
-          display: none;
-      }
-      #description {
-          display: block;
-          border-style: solid;
-          border-color: blue;
-          border-width: 1px;
-          margin: 4ex;
-          font-size: smaller;
-      }
-      .description .name {
-          text-align: center;
-          font-weight: bolder;
-      }
-      .bookit {
-          font-sie: larger;
-          font-weight:bolder;
-          margin: 2ex;
-      }
-      .pointer-position span {
-          min-width: 8em;
-      }
-      #filter {
-          margin: 6ex;
-      }
-      #filter input {
-          border-style: solid;
-      }
-      .item {
-          margin-left: 2em;
-      }
-      .hidden-item {
-          display: none;
-      }
-      .container {
-          margin-left: 2em;
-      }
-    </style>
+    <link href="shared-styles.css"
+          rel="st6ylesheet"/>
     <script type="text/javascript" src="placement.js"></script>
     <script type="text/javascript">
 window.onload = function() {
