Don't hard code furnashings files in placement.js.  Pass them in.

--- a/floor_plan.html
+++ b/floor_plan.html
@@ -10,7 +10,13 @@
     <script type="text/javascript">
 window.onload = function() {
   console.log("onload handler.");
-  load_and_draw_things();
+    load_and_draw_things([
+        "furnashings/things.json",
+        "furnashings/metal_shop.json",
+        "furnashings/wood_shop.json",
+        "furnashings/offices.json",
+        "furnashings/welding_area.json"
+    ]);
 };
 
     </script>
