--- a/floor_plan.html
+++ b/floor_plan.html
@@ -1,21 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Hobby Shop Floor Plan</title>
+    <title>Old Hobby Shop Floor Plan (W31)</title>
     <meta name="viewport"
           content="width=device-width, initial-scale=1">
-    <link href="shared-styles.css"
+    <link href="../../shared-styles.css"
           rel="st6ylesheet"/>
-    <script type="text/javascript" src="placement.js"></script>
+    <script type="text/javascript"
+            src="../../placement.js"></script>
     <script type="text/javascript">
 window.onload = function() {
   console.log("onload handler.");
     load_and_draw_things([
-        "furnashings/things.json",
-        "furnashings/metal_shop.json",
-        "furnashings/wood_shop.json",
-        "furnashings/offices.json",
-        "furnashings/welding_area.json"
+        "Facilities/HobbyShop-DuPont/furnashings/things.json",
+        "Facilities/HobbyShop-DuPont/furnashings/metal_shop.json",
+        "Facilities/HobbyShop-DuPont/furnashings/wood_shop.json",
+        "Facilities/HobbyShop-DuPont/furnashings/offices.json",
+        "Facilities/HobbyShop-DuPont/furnashings/welding_area.json"
     ]);
 };
 
@@ -41,7 +42,7 @@ window.onload = function() {
         get access to the loaded SVG document.
       -->
       <object id="floor_plan_svg"
-              data="floor_plan_cleanup/cleaned_up.svg"
+              data="Facilities/HobbyShop-DuPont/cleaned_up.svg"
               type="image/svg+xml"
               alt="Floor plan of the Hobby Shop showing the locations of
                    machines, furnature, tools, etc.">
