Title should indicate old shop space.

--- a/Facilities/HobbyShop-DuPont/floor_plan.html
+++ b/Facilities/HobbyShop-DuPont/floor_plan.html
@@ -27,7 +27,7 @@ window.onload = function() {
              id="selection-overlay">
     </svg>
 
-    <h1>MIT Hobby Shop</h1>
+    <h1>MIT Hobby Shop (W31)</h1>
     <p>
       Each grid box is 16 feet by 16 feet.
     </p>
