Fix link element for stylesheet.  See previous commit.

--- a/Facilities/CRMII/floor_plan.html
+++ b/Facilities/CRMII/floor_plan.html
@@ -7,7 +7,7 @@
     <meta name="viewport"
           content="width=device-width, initial-scale=1">
     <link href="../../shared-styles.css"
-          rel="st6ylesheet"/>
+          rel="stylesheet"/>
     <script type="text/javascript"
             src="../../placement.js"></script>
     <script type="text/javascript">
