Move SawStop table saw to new shop.  Display the contents of the new JSON file.

--- a/Facilities/HobbyShop-N51/floor_plan.html
+++ b/Facilities/HobbyShop-N51/floor_plan.html
@@ -12,7 +12,7 @@
 window.onload = function() {
   console.log("onload handler.");
     load_and_draw_things([
-        "furnashings/measurement.json"
+        "furnashings/wood.json"
     ]);
 };
 
@@ -20,7 +20,7 @@ window.onload = function() {
   </head>
   <body>
     <svg xmlns="http://www.w3.org/2000/svg"
-             id="selection-overlay">
+         id="selection-overlay">
     </svg>
 
     <h1>Hobby Shop Floor Plan (N51)</h1>
