--- a/Facilities/HobbyShop-N51/floor_plan.html
+++ b/Facilities/HobbyShop-N51/floor_plan.html
@@ -2,6 +2,8 @@
 <html lang="en">
   <head>
     <title>Hobby Shop Floor Plan (N51)</title>
+    <meta http-equiv="Permissions-Policy"
+          content="interest-cohort=()">
     <meta name="viewport"
           content="width=device-width, initial-scale=1">
     <link href="../../shared-styles.css"
