Real world grid.

--- a/Facilities/HobbyShop-N51/floor_plan.html
+++ b/Facilities/HobbyShop-N51/floor_plan.html
@@ -14,6 +14,7 @@
 window.onload = function() {
   console.log("onload handler.");
     load_and_draw_things([
+        "furnashings/monuments.json",
         "furnashings/wood.json",
         "furnashings/cnc_room.json"
     ]);
