Start ofback metal shop area.

--- a/Facilities/HobbyShop-N51/floor_plan.html
+++ b/Facilities/HobbyShop-N51/floor_plan.html
@@ -16,6 +16,7 @@ window.onload = function() {
     load_and_draw_things([
         "furnashings/monuments.json",
         "furnashings/wood.json",
+        "furnashings/metal.json",
         "furnashings/cnc_room.json"
     ]);
 };
