--- a/Facilities/HobbyShop-N51/floor_plan.html
+++ b/Facilities/HobbyShop-N51/floor_plan.html
@@ -17,7 +17,8 @@ window.onload = function() {
         "furnashings/monuments.json",
         "furnashings/wood.json",
         "furnashings/metal.json",
-        "furnashings/cnc_room.json"
+        "furnashings/cnc_room.json",
+        "furnashings/welding_room.json"
     ]);
 };
 
