Add booking link for finishing room.

--- a/Facilities/HobbyShop-N51/floor_plan.html
+++ b/Facilities/HobbyShop-N51/floor_plan.html
@@ -18,7 +18,8 @@ window.onload = function() {
         "furnashings/wood.json",
         "furnashings/metal.json",
         "furnashings/cnc_room.json",
-        "furnashings/welding_room.json"
+        "furnashings/welding_room.json",
+        "furnashings/finishing.json"
     ]);
 };
 
