--- a/Facilities/CRMII/archive_area.html
+++ b/Facilities/CRMII/archive_area.html
@@ -82,6 +82,6 @@ window.onload = function() {
              onchange="filter_items_list(this.value)"/>
     </div>
     -->
-    <div style="disoplay: none" id="items"></div>
+    <div style="display: none" id="items"></div>
   </body>
 </html>
