Add link for NEMS table layout.

--- a/Facilities/CRMII/index.html
+++ b/Facilities/CRMII/index.html
@@ -12,6 +12,9 @@
       <li>
         <a href="JacksonRoom.svg">Jackson Room</a>
       </li>
+      <li>
+        <a href="NEMS-layout-2024.html">NEMS exhibit table layout</a>
+      </li>
     </ul>
   </body>
 </html>
