Fix styles to try to fit floor plan on one page -- good enough if one just prints the second page.  Bump year to 2025.

--- a/Facilities/CRMII/NEMS-layout-2024.html
+++ b/Facilities/CRMII/NEMS-layout-2024.html
@@ -8,6 +8,18 @@
           content="width=device-width, initial-scale=1">
     <link href="../../shared-styles.css"
           rel="stylesheet"/>
+    <style>
+      h1 {
+          font-size: 12pt;
+      }
+      #floor_plan_svg {
+          object-fit: contain;
+      }
+      /* This appears to have no effect in Google Chrome: */
+      @media print (.pointer-position) {
+          display: none;
+      }
+    </style>
     <script type="text/javascript"
             src="../../placement.js"></script>
     <script type="text/javascript">
@@ -26,7 +38,7 @@ window.onload = function() {
          id="selection-overlay">
     </svg>
 
-    <h1>2024 NEMS Layout, CRMII Jachson Room</h1>
+    <h1>2025 NEMS Layout, CRMII Jachson Room</h1>
     <p>
 
     </p>
