--- a/Facilities/HobbyShop-DuPont/furnashings/wood_mill.html
+++ b/Facilities/HobbyShop-DuPont/furnashings/wood_mill.html
@@ -5,7 +5,7 @@
   <body>
     
     <div class="title">
-      Wood SHop Bridgeport Milling Machine
+      Wood Shop Bridgeport Milling Machine
     </div>
 
     <p>
@@ -18,6 +18,7 @@
       
       <img src="pictures/wood_shop_bridgeport_mill.jpg"
            alt="Photo of wood shop Bridgeport mill"
+           width="90%"
            />
 
   </body>
